<resources>
    <string name="app_name">Pen And Paper Rpg</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_room">RoomList</string>
    <string name="title_activity_room_list">RoomList</string>
    <string name="message_hint">Enter Action</string>
    <string name="send">Send</string>

    <!-- Dice -->
    <string name="die2">2</string>
    <string name="die4">4</string>
    <string name="die6">6</string>
    <string name="die8">8</string>
    <string name="die10">10</string>
    <string name="die12">12</string>
    <string name="die20">20</string>
    <string name="die100">100</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="profile_me">My Profile Pic</string>
    <string name="profile_other">Other profile pic</string>
</resources>
