<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/llDice"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">



            <Button
                android:id="@+id/btDie2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die2"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die4"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie6"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die6"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie8"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die8"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie10"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die10"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie12"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die12"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie20"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die20"
                android:textSize="18sp" >
            </Button>

            <Button
                android:id="@+id/btDie100"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:paddingEnd="5dp"
                android:text="@string/die100"
                android:textSize="18sp" >
            </Button>

        </LinearLayout>
    </ScrollView>


    <ListView
        android:id="@+id/lvChat"
        android:transcriptMode="alwaysScroll"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/llDice"
        android:layout_above="@+id/llSend"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" />
    <RelativeLayout
        android:id="@+id/llSend"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:background="#ffffff"
        android:paddingTop="5dp"
        android:paddingBottom="10dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp"
        android:layout_height="wrap_content" >
        <EditText
            android:id="@+id/etMessage"
            android:layout_toStartOf="@+id/btSend"
            android:layout_alignBottom="@+id/btSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/message_hint"
            android:inputType="textShortMessage"
            android:imeOptions="actionSend"
            />
        <Button
            android:id="@+id/btSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|end"
            android:paddingEnd="10dp"
            android:layout_alignParentEnd="true"
            android:text="@string/send"
            android:textSize="18sp" >
        </Button>
    </RelativeLayout>
</RelativeLayout>